Fixed a Mobile Scrolling Issue Caused by Horizontal Overflow

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -151,6 +151,7 @@
     height: 4rem;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 @media (min-width: 28rem) {
@@ -239,6 +240,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow: hidden;
 }
 
 @media (max-width: 28rem) {
