--- a/static/css/sections/page.css
+++ b/static/css/sections/page.css
@@ -54,6 +54,7 @@
 
 .isSticky {
     width: 100%;
+    overflow: hidden;
 }
 
 .isSticky>#progressHr {
